pkgdata_DATA = \
arm_le_co.emi  flip.wav      grid.emi         \
arm_le.emi     floor2.jpg    grid_long.emi    \
arm_ri_co.emi  floor2.png    grid_tex_co.emi  \
arm_ri.emi     floor.emi     grid_tex.emi     tablestd.emi \
ball_co.emi    floor.jpg     head_co.emi      tbltruck_co.emi \
bumper_co.emi  flush.wav     head.emi         \
bumper.emi     linux.png     tbltruck.emi	    \
bumper_sh.emi  lock.wav      tbltruck_lo.emi  \
bump.wav       tbltruck_vi.emi                \
font_34.png    tiles.png                      \
evil.wav       formats.txt   topgrid.emi      \
fart.wav       nudge.wav                      \
fjong.wav      grid_big.emi  pinballnew.pbl

EXTRA_DIST = $(pkgdata_DATA)
