AUTOMAKE_OPTIONS = gnu

noinst_PROGRAMS = simple light texture load explode collision signal billboard font thread menu

INCLUDES = -I../base -I../addon -I../visitor
LDADD = ../base/libemilia_base.a ../addon/libemilia_addon.a ../visitor/libemilia_visitor.a

simple_SOURCES = simple.cpp

light_SOURCES = light.cpp

texture_SOURCES = texture.cpp

load_SOURCES = load.cpp

explode_SOURCES = explode.cpp

collision_SOURCES = collision.cpp

signal_SOURCES = signal.cpp

billboard_SOURCES = billboard.cpp

font_SOURCES = font.cpp

thread_SOURCES = thread.cpp

menu_SOURCES = menu.cpp