AUTOMAKE_OPTIONS = gnu

noinst_LIBRARIES = libemilia_visitor.a

INCLUDES = -I../base -I../addon

libemilia_visitor_a_SOURCES = \
AlignVisitor.cpp \
AmbientLightVisitor.cpp \
BehaviorVisitor.cpp \
CollisionVisitor.cpp \
OctTree.cpp \
OpenGLVisitor.cpp \
OpenGLTransVisitor.cpp \
PNormalVisitor.cpp \
PointLightVisitor.cpp \
SignalSender.cpp \
SoundVisitor.cpp \
TransformVisitor.cpp

noinst_HEADERS = \
AlignVisitor.h \
AmbientLightVisitor.h \
BehaviorVisitor.h \
CollisionVisitor.h \
OctTree.h \
OpenGLVisitor.h \
OpenGLTransVisitor.h \
PNormalVisitor.h \
PointLightVisitor.h \
SignalSender.h \
SoundVisitor.h \
TransformVisitor.h
