AUTOMAKE_OPTIONS = gnu

noinst_LIBRARIES = libemilia_addon.a

INCLUDES = -I../core -I../visitor

libemilia_addon_a_SOURCES = \
BigSphere.cpp \
ColorBehavior.cpp \
Cone.cpp \
Cube.cpp \
Cylinder.cpp \
EmFont.cpp \
Grid.cpp \
KeyBehavior.cpp \
KeyRotBehavior.cpp \
Meny.cpp \
Shape3DUtil.cpp \
SoundUtil.cpp \
Sphere.cpp \
StdAnimation.cpp \
TexAnimation.cpp \
TextureUtil.cpp

noinst_HEADERS = \
BigSphere.h \
ColorBehavior.h \
Cone.h \
Cube.h \
Cylinder.h \
EmFont.h \
Grid.h \
KeyBehavior.h \
KeyRotBehavior.h \
Meny.h \
Shape3DUtil.h \
SoundUtil.h \
Sphere.h \
StdAnimation.h \
TexAnimation.h \
TextureUtil.h
