AUTOMAKE_OPTIONS = gnu

noinst_LIBRARIES = libemilia_core.a

INCLUDES = -I../addon -I../visitor

libemilia_core_a_SOURCES = \
Behavior.cpp \
BillBoard.cpp \
Camera.cpp \
Config.cpp \
CollisionBounds.cpp \
EMath.cpp \
Engine.cpp \
Group.cpp \
Keyboard.cpp \
Light.cpp \
Node.cpp \
Polygon.cpp \
Shape3D.cpp \
Sound.cpp 

noinst_HEADERS = \
Behavior.h \
BillBoard.h \
Camera.h \
Config.h \
CollisionBounds.h \
EMath.h \
Engine.h \
Group.h \
Keyboard.h \
Light.h \
Node.h \
Polygon.h \
Private.h \
Shape3D.h \
Sound.h \
StateMachine.h \
Visitor.h
