AUTOMAKE_OPTIONS = gnu

noinst_PROGRAMS = simple texture font load key big joy alpha light anim math meny sound camera billboard explode fire signal

INCLUDES = -I../core -I../addon -I../visitor
LDADD =  ../core/libemilia_core.a ../addon/libemilia_addon.a ../visitor/libemilia_visitor.a 

simple_SOURCES = simple.cpp

texture_SOURCES = texture.cpp

font_SOURCES = font.cpp

load_SOURCES = load.cpp

key_SOURCES = key.cpp

big_SOURCES = big.cpp

dnl joy_LDADD =

joy_SOURCES = joy.cpp

alpha_SOURCES = alpha.cpp

light_SOURCES = light.cpp

anim_SOURCES = anim.cpp

math_SOURCES = math.cpp

meny_SOURCES = meny.cpp

sound_SOURCES = sound.cpp

camera_SOURCES = camera.cpp

billboard_SOURCES = billboard.cpp

explode_SOURCES = explode.cpp

fire_SOURCES = fire.cpp

signal_SOURCES = signal.cpp
